project/service-mesh/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: group-4-destination-rule
  namespace: group-4
spec:
  host: recommendations
  subsets:
  - name: recommendation-food
    labels:
      version: food
  - name: recommendation-music
    labels:
      version: music
