project/service-mesh/virtual-service-food.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-food
  namespace: group-4
spec:
  hosts:
  - recommendations
  http:
    - route:
      - destination:
          host: recommendations
          subset: recommendation-food
          port:
            number: 8080
        weight: 100
